syntax = "proto3";

package sdk;

option go_package = "github.com/ava-labs/avalanchego/proto/pb/sdk";

message PullGossipRequest {
  bytes salt = 2;
  bytes filter = 3;
}

message PullGossipResponse {
  repeated bytes gossip = 1;
}

message PushGossip {
  repeated bytes gossip = 1;
}
